# tinyrenderer

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  LICENSE  README.md  data.hpp  geometry.hpp  imgui.ini  main.cpp  model.cpp  model.hpp  run-project.fish  run-project.sh
.zed/: debug.json  tasks.json
src/: camera.cpp  camera.hpp  geometry.hpp  main.cpp  model.cpp  model.hpp  our_gl.cpp  our_gl.hpp  shader.hpp  tgaimage.cpp  tgaimage.hpp
